# mycookiecutter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  pyproject.toml  release-please-config.json  renovate.json5
.github/: ci-base.yml  main.yml
.github/workflows/: ci-base.yml  deptry.yml  main.yml  mypy.yml  pytest.yml  release-please.yml  ruff.yml  semantic-pull-request.yml  typos.yml
tests/: test_template.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci-base.yml  deptry.yml  pytest.yml  release-please.yml  semantic-pull-request.yml  typos.yml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: config.py  main.py
