[project]
name = "mycookiecutter"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9, <3.13"
dependencies = []

[dependency-groups]
dev = ["deptry>=0.23.0", "mypy>=1.15.0", "pre-commit>=4.2.0", "pytest>=8.3.5"]

[tool.mypy]
exclude = "{{cookiecutter.project_name}}"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.deptry.per_rule_ignores]
DEP001 = ["pydantic", "pydantic_settings"]

[tool.typos]
files.extend-exclude = ["CHANGELOG.md"]
